begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.om.helpers
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
package|;
end_package

begin_import
import|import
name|java
operator|.
name|time
operator|.
name|Instant
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|HddsProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|HddsProtos
operator|.
name|ReplicationFactor
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|HddsProtos
operator|.
name|ReplicationType
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConsts
operator|.
name|OM_KEY_PREFIX
import|;
end_import

begin_comment
comment|/**  * Information about one initialized upload.  */
end_comment

begin_class
DECL|class|OmMultipartUpload
specifier|public
class|class
name|OmMultipartUpload
block|{
DECL|field|volumeName
specifier|private
name|String
name|volumeName
decl_stmt|;
DECL|field|bucketName
specifier|private
name|String
name|bucketName
decl_stmt|;
DECL|field|keyName
specifier|private
name|String
name|keyName
decl_stmt|;
DECL|field|uploadId
specifier|private
name|String
name|uploadId
decl_stmt|;
DECL|field|creationTime
specifier|private
name|Instant
name|creationTime
decl_stmt|;
DECL|field|replicationType
specifier|private
name|HddsProtos
operator|.
name|ReplicationType
name|replicationType
decl_stmt|;
DECL|field|replicationFactor
specifier|private
name|HddsProtos
operator|.
name|ReplicationFactor
name|replicationFactor
decl_stmt|;
DECL|method|OmMultipartUpload (String volumeName, String bucketName, String keyName, String uploadId)
specifier|public
name|OmMultipartUpload
parameter_list|(
name|String
name|volumeName
parameter_list|,
name|String
name|bucketName
parameter_list|,
name|String
name|keyName
parameter_list|,
name|String
name|uploadId
parameter_list|)
block|{
name|this
operator|.
name|volumeName
operator|=
name|volumeName
expr_stmt|;
name|this
operator|.
name|bucketName
operator|=
name|bucketName
expr_stmt|;
name|this
operator|.
name|keyName
operator|=
name|keyName
expr_stmt|;
name|this
operator|.
name|uploadId
operator|=
name|uploadId
expr_stmt|;
block|}
DECL|method|OmMultipartUpload (String volumeName, String bucketName, String keyName, String uploadId, Instant creationDate)
specifier|public
name|OmMultipartUpload
parameter_list|(
name|String
name|volumeName
parameter_list|,
name|String
name|bucketName
parameter_list|,
name|String
name|keyName
parameter_list|,
name|String
name|uploadId
parameter_list|,
name|Instant
name|creationDate
parameter_list|)
block|{
name|this
operator|.
name|volumeName
operator|=
name|volumeName
expr_stmt|;
name|this
operator|.
name|bucketName
operator|=
name|bucketName
expr_stmt|;
name|this
operator|.
name|keyName
operator|=
name|keyName
expr_stmt|;
name|this
operator|.
name|uploadId
operator|=
name|uploadId
expr_stmt|;
name|this
operator|.
name|creationTime
operator|=
name|creationDate
expr_stmt|;
block|}
DECL|method|OmMultipartUpload (String volumeName, String bucketName, String keyName, String uploadId, Instant creationTime, ReplicationType replicationType, ReplicationFactor replicationFactor)
specifier|public
name|OmMultipartUpload
parameter_list|(
name|String
name|volumeName
parameter_list|,
name|String
name|bucketName
parameter_list|,
name|String
name|keyName
parameter_list|,
name|String
name|uploadId
parameter_list|,
name|Instant
name|creationTime
parameter_list|,
name|ReplicationType
name|replicationType
parameter_list|,
name|ReplicationFactor
name|replicationFactor
parameter_list|)
block|{
name|this
operator|.
name|volumeName
operator|=
name|volumeName
expr_stmt|;
name|this
operator|.
name|bucketName
operator|=
name|bucketName
expr_stmt|;
name|this
operator|.
name|keyName
operator|=
name|keyName
expr_stmt|;
name|this
operator|.
name|uploadId
operator|=
name|uploadId
expr_stmt|;
name|this
operator|.
name|creationTime
operator|=
name|creationTime
expr_stmt|;
name|this
operator|.
name|replicationType
operator|=
name|replicationType
expr_stmt|;
name|this
operator|.
name|replicationFactor
operator|=
name|replicationFactor
expr_stmt|;
block|}
DECL|method|from (String key)
specifier|public
specifier|static
name|OmMultipartUpload
name|from
parameter_list|(
name|String
name|key
parameter_list|)
block|{
name|String
index|[]
name|split
init|=
name|key
operator|.
name|split
argument_list|(
name|OM_KEY_PREFIX
argument_list|)
decl_stmt|;
if|if
condition|(
name|split
operator|.
name|length
operator|<
literal|5
condition|)
block|{
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"Key "
operator|+
name|key
operator|+
literal|" doesn't have enough segments to be a valid multipart upload key"
argument_list|)
throw|;
block|}
name|String
name|uploadId
init|=
name|split
index|[
name|split
operator|.
name|length
operator|-
literal|1
index|]
decl_stmt|;
name|String
name|volume
init|=
name|split
index|[
literal|1
index|]
decl_stmt|;
name|String
name|bucket
init|=
name|split
index|[
literal|2
index|]
decl_stmt|;
return|return
operator|new
name|OmMultipartUpload
argument_list|(
name|volume
argument_list|,
name|bucket
argument_list|,
name|key
operator|.
name|substring
argument_list|(
name|volume
operator|.
name|length
argument_list|()
operator|+
name|bucket
operator|.
name|length
argument_list|()
operator|+
literal|3
argument_list|,
name|key
operator|.
name|length
argument_list|()
operator|-
name|uploadId
operator|.
name|length
argument_list|()
operator|-
literal|1
argument_list|)
argument_list|,
name|uploadId
argument_list|)
return|;
block|}
DECL|method|getDbKey ()
specifier|public
name|String
name|getDbKey
parameter_list|()
block|{
return|return
name|OmMultipartUpload
operator|.
name|getDbKey
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|uploadId
argument_list|)
return|;
block|}
DECL|method|getDbKey (String volume, String bucket, String key, String uploadId)
specifier|public
specifier|static
name|String
name|getDbKey
parameter_list|(
name|String
name|volume
parameter_list|,
name|String
name|bucket
parameter_list|,
name|String
name|key
parameter_list|,
name|String
name|uploadId
parameter_list|)
block|{
return|return
name|getDbKey
argument_list|(
name|volume
argument_list|,
name|bucket
argument_list|,
name|key
argument_list|)
operator|+
name|OM_KEY_PREFIX
operator|+
name|uploadId
return|;
block|}
DECL|method|getDbKey (String volume, String bucket, String key)
specifier|public
specifier|static
name|String
name|getDbKey
parameter_list|(
name|String
name|volume
parameter_list|,
name|String
name|bucket
parameter_list|,
name|String
name|key
parameter_list|)
block|{
return|return
name|OM_KEY_PREFIX
operator|+
name|volume
operator|+
name|OM_KEY_PREFIX
operator|+
name|bucket
operator|+
name|OM_KEY_PREFIX
operator|+
name|key
return|;
block|}
DECL|method|getVolumeName ()
specifier|public
name|String
name|getVolumeName
parameter_list|()
block|{
return|return
name|volumeName
return|;
block|}
DECL|method|getBucketName ()
specifier|public
name|String
name|getBucketName
parameter_list|()
block|{
return|return
name|bucketName
return|;
block|}
DECL|method|getKeyName ()
specifier|public
name|String
name|getKeyName
parameter_list|()
block|{
return|return
name|keyName
return|;
block|}
DECL|method|getUploadId ()
specifier|public
name|String
name|getUploadId
parameter_list|()
block|{
return|return
name|uploadId
return|;
block|}
DECL|method|getCreationTime ()
specifier|public
name|Instant
name|getCreationTime
parameter_list|()
block|{
return|return
name|creationTime
return|;
block|}
DECL|method|setCreationTime (Instant creationTime)
specifier|public
name|void
name|setCreationTime
parameter_list|(
name|Instant
name|creationTime
parameter_list|)
block|{
name|this
operator|.
name|creationTime
operator|=
name|creationTime
expr_stmt|;
block|}
DECL|method|getReplicationType ()
specifier|public
name|ReplicationType
name|getReplicationType
parameter_list|()
block|{
return|return
name|replicationType
return|;
block|}
DECL|method|setReplicationType ( ReplicationType replicationType)
specifier|public
name|void
name|setReplicationType
parameter_list|(
name|ReplicationType
name|replicationType
parameter_list|)
block|{
name|this
operator|.
name|replicationType
operator|=
name|replicationType
expr_stmt|;
block|}
DECL|method|getReplicationFactor ()
specifier|public
name|ReplicationFactor
name|getReplicationFactor
parameter_list|()
block|{
return|return
name|replicationFactor
return|;
block|}
DECL|method|setReplicationFactor ( ReplicationFactor replicationFactor)
specifier|public
name|void
name|setReplicationFactor
parameter_list|(
name|ReplicationFactor
name|replicationFactor
parameter_list|)
block|{
name|this
operator|.
name|replicationFactor
operator|=
name|replicationFactor
expr_stmt|;
block|}
block|}
end_class

end_unit

