begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *<p>  * http://www.apache.org/licenses/LICENSE-2.0  *<p>  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.om.response.key
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|response
operator|.
name|key
package|;
end_package

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Assert
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmKeyInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|TestOMRequestUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
import|;
end_import

begin_comment
comment|/**  * Tests OMKeyCommitResponse.  */
end_comment

begin_class
DECL|class|TestOMKeyCommitResponse
specifier|public
class|class
name|TestOMKeyCommitResponse
extends|extends
name|TestOMKeyResponse
block|{
annotation|@
name|Test
DECL|method|testAddToDBBatch ()
specifier|public
name|void
name|testAddToDBBatch
parameter_list|()
throws|throws
name|Exception
block|{
name|OmKeyInfo
name|omKeyInfo
init|=
name|TestOMRequestUtils
operator|.
name|createOmKeyInfo
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|replicationType
argument_list|,
name|replicationFactor
argument_list|)
decl_stmt|;
name|OzoneManagerProtocolProtos
operator|.
name|OMResponse
name|omResponse
init|=
name|OzoneManagerProtocolProtos
operator|.
name|OMResponse
operator|.
name|newBuilder
argument_list|()
operator|.
name|setCommitKeyResponse
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|CommitKeyResponse
operator|.
name|getDefaultInstance
argument_list|()
argument_list|)
operator|.
name|setStatus
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|OK
argument_list|)
operator|.
name|setCmdType
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Type
operator|.
name|CommitKey
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
comment|// As during commit Key, entry will be already there in openKeyTable.
comment|// Adding it here.
name|TestOMRequestUtils
operator|.
name|addKeyToTable
argument_list|(
literal|true
argument_list|,
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|clientID
argument_list|,
name|replicationType
argument_list|,
name|replicationFactor
argument_list|,
name|omMetadataManager
argument_list|)
expr_stmt|;
name|String
name|openKey
init|=
name|omMetadataManager
operator|.
name|getOpenKey
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|clientID
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omMetadataManager
operator|.
name|getOpenKeyTable
argument_list|()
operator|.
name|isExist
argument_list|(
name|openKey
argument_list|)
argument_list|)
expr_stmt|;
name|OMKeyCommitResponse
name|omKeyCommitResponse
init|=
operator|new
name|OMKeyCommitResponse
argument_list|(
name|omKeyInfo
argument_list|,
name|clientID
argument_list|,
name|omResponse
argument_list|)
decl_stmt|;
name|omKeyCommitResponse
operator|.
name|addToDBBatch
argument_list|(
name|omMetadataManager
argument_list|,
name|batchOperation
argument_list|)
expr_stmt|;
comment|// Do manual commit and see whether addToBatch is successful or not.
name|omMetadataManager
operator|.
name|getStore
argument_list|()
operator|.
name|commitBatchOperation
argument_list|(
name|batchOperation
argument_list|)
expr_stmt|;
comment|// When key commit key is deleted from openKey table and added to keyTable.
name|Assert
operator|.
name|assertFalse
argument_list|(
name|omMetadataManager
operator|.
name|getOpenKeyTable
argument_list|()
operator|.
name|isExist
argument_list|(
name|openKey
argument_list|)
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omMetadataManager
operator|.
name|getKeyTable
argument_list|()
operator|.
name|isExist
argument_list|(
name|omMetadataManager
operator|.
name|getOzoneKey
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|)
argument_list|)
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testAddToDBBatchNoOp ()
specifier|public
name|void
name|testAddToDBBatchNoOp
parameter_list|()
throws|throws
name|Exception
block|{
name|OmKeyInfo
name|omKeyInfo
init|=
name|TestOMRequestUtils
operator|.
name|createOmKeyInfo
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|replicationType
argument_list|,
name|replicationFactor
argument_list|)
decl_stmt|;
name|OzoneManagerProtocolProtos
operator|.
name|OMResponse
name|omResponse
init|=
name|OzoneManagerProtocolProtos
operator|.
name|OMResponse
operator|.
name|newBuilder
argument_list|()
operator|.
name|setCommitKeyResponse
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|CommitKeyResponse
operator|.
name|getDefaultInstance
argument_list|()
argument_list|)
operator|.
name|setStatus
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|KEY_NOT_FOUND
argument_list|)
operator|.
name|setCmdType
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Type
operator|.
name|CommitKey
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|OMKeyCommitResponse
name|omKeyCommitResponse
init|=
operator|new
name|OMKeyCommitResponse
argument_list|(
name|omKeyInfo
argument_list|,
name|clientID
argument_list|,
name|omResponse
argument_list|)
decl_stmt|;
comment|// As during commit Key, entry will be already there in openKeyTable.
comment|// Adding it here.
name|TestOMRequestUtils
operator|.
name|addKeyToTable
argument_list|(
literal|true
argument_list|,
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|clientID
argument_list|,
name|replicationType
argument_list|,
name|replicationFactor
argument_list|,
name|omMetadataManager
argument_list|)
expr_stmt|;
name|String
name|openKey
init|=
name|omMetadataManager
operator|.
name|getOpenKey
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|clientID
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omMetadataManager
operator|.
name|getOpenKeyTable
argument_list|()
operator|.
name|isExist
argument_list|(
name|openKey
argument_list|)
argument_list|)
expr_stmt|;
name|omKeyCommitResponse
operator|.
name|addToDBBatch
argument_list|(
name|omMetadataManager
argument_list|,
name|batchOperation
argument_list|)
expr_stmt|;
comment|// Do manual commit and see whether addToBatch is successful or not.
name|omMetadataManager
operator|.
name|getStore
argument_list|()
operator|.
name|commitBatchOperation
argument_list|(
name|batchOperation
argument_list|)
expr_stmt|;
comment|// As omResponse is error it is a no-op. So, entry should still be in
comment|// openKey table.
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omMetadataManager
operator|.
name|getOpenKeyTable
argument_list|()
operator|.
name|isExist
argument_list|(
name|openKey
argument_list|)
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertFalse
argument_list|(
name|omMetadataManager
operator|.
name|getKeyTable
argument_list|()
operator|.
name|isExist
argument_list|(
name|omMetadataManager
operator|.
name|getOzoneKey
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|)
argument_list|)
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

